fix: text align btn

--- a/wp-content/themes/mebli/assets/scss/_global.scss
+++ b/wp-content/themes/mebli/assets/scss/_global.scss
@@ -111,6 +111,7 @@ form {
   font-size: 24px;
   font-weight: 600;
   line-height: 1.2;
+  text-align: center;
   &:active {
     opacity: .7;
   }
